...
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="icon">icon</string>
    <string name="delete">delete</string>
    <string name="add_meeting">add</string>
    <string name="Filter">Filter</string>
    <string name="fab">fab</string>
    <string name="floating">fab</string>
    <string name="location_filter">Location Filter</string>
    <string name="date_filter">Date Filter</string>
    <string name="name">name</string>
    <string name="topic">Topic</string>
    <string name="date">date</string>
...
    <string name="appointement_date">Appointement date</string>
    <string name="_8_00">8:00</string>
    <string name="no_filter">nofilter</string>
    <string name="room_one">Room One</string>
    <string name="start_hour">Start hour</string>
    <string name="nouvelle_reunion">NOUVELLE REUNION</string>
    <string name="objet_de_la_r_union">Objet de la réunion</string>
    <string name="date_de_la_r_union">Date de la réunion</string>
    <string name="heure_de_la_r_union">Heure de la réunion</string>
    <string name="num_ro_de_salle_de_r_union">Numéro de salle de réunion</string>
    <string name="e_mails_des_participants">E-mails des participants</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="scroll_view">scroll_view</string>
    <string name="ok">OK</string>
    <string name="valid_email">Valid email</string>
    <string name="heure_de_d_but_de_r_union">Heure de début de réunion</string>
    <string name="ajouter_un_mail">Ajouter un mail</string>
    <string name="erreur_objet_reunion">Merci de remplir le champs -Objet de la réunion-</string>
    <string name="erreur_heure_reunion">Merci de remplir le champs -Heure de la réunion-</string>
    <string name="erreur_mail">Veuillez entrer une adresse mail valide</string>
    <string name="erreur_minimum_mails">Veuillez entrer au moins 2 adresses mail</string>
    <string name="choose_your_room">Choose your room</string>
    <string name="room_one_spinner">Room One</string>
...
