...
        android:contentDescription="@string/nouvelle_reunion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/datePickerButton"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="@dimen/defaultMarge24dp"
        android:layout_marginTop="@dimen/defaultMarge24dp"
        android:layout_marginRight="@dimen/defaultMarge24dp"
...
        app:icon="@drawable/ic_baseline_calendar_month_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleTextView" />

    <Button
        android:id="@+id/startTimeButton"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="@dimen/defaultMarge24dp"
        android:layout_marginTop="@dimen/inputCaseMarginTop"
        android:layout_marginRight="@dimen/defaultMarge24dp"
...
        app:icon="@drawable/ic_baseline_hourglass_empty_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePickerButton" />

    <Spinner
        android:id="@+id/roomChoiceAddMeeting"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/inputCaseMarginTop"
        android:layout_marginEnd="@dimen/defaultMarge24dp"
        android:text="@string/num_ro_de_salle_de_r_union"
...
        android:theme="@style/Widget.AppCompat.DropDownItem.Spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startTimeButton" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameOfMeetingLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defaultMarge24dp"
        android:layout_marginTop="@dimen/inputCaseMarginTop"
        android:layout_marginEnd="@dimen/defaultMarge24dp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roomChoiceAddMeeting"
        app:startIconDrawable="@drawable/ic_baseline_analytics_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameOfMeeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/objet_de_la_r_union"
            android:inputType="text"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/participants_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defaultMarge24dp"
        android:layout_marginTop="@dimen/inputCaseMarginTop"
        android:contentDescription="@string/e_mails_des_participants"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toStartOf="@+id/email_ok_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameOfMeetingLayout"
        app:startIconDrawable="@drawable/ic_baseline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/participants_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mails_des_participants"
            android:inputType="textEmailAddress"
            android:textSize="16sp" />

...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/participants_layout">

    </com.google.android.material.chip.ChipGroup>

...
