...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.persival.mareu_mvvm.ui.home.MeetingFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listOfMeeting"
        android:name="com.persival.mareu_mvvm.ui.meeting.MeetingFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/itemview_meeting_list" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
...
